Basic home page v.1

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <title> Home  </title>
     <h1> Maps for DND </h1>
-    <h2><a href=> Login </a> or <a href=> Signup </a></h2> </p>
+    <h2><a href=> Login </a> or <a href=> Signup </a></h2>
     <h4> <a href= >Join a game with a code </a> </h4>
 </head>
 <body>
