--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <title> Home  </title>
     <h1> Maps for DND </h1>
-    <h2><a href=> Login </a> or <a href=> Signup </a></h2>
-    <h4> <a href= >Join a game with a code </a> </h4>
+    <nav>
+        <h2><a href=> Login </a> or <a href=> Signup </a></h2>
+        <h4> <a href= >Join a game with a code </a> </h4>
+    </nav>
 </head>
 <body>
 </body>
 <footer>
-    <a href="https://github.com/Teddy-Dragon/startup"> Github </a>
+    <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
 </footer>
 
 </html>
