--- a/login.html
+++ b/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
 <header>
+    <a href="index.html"> Home page <br></a>
     <a href= > Join a game with a code </a>
 </header>
 <body>
