Added game.html. Added submit buttons to login.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1> Maps for DND </h1>
     <nav>
         <h2><a href="login.html"> Login </a> or <a href="login.html"> Signup </a></h2>
-        <h4> <a href= >Join a game with a code </a> </h4>
+        <h4> <a href="game.html" >Join a game </a> </h4>
     </nav>
 </head>
 <body>
