Added comments about functionality

--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
   <label for="code"> Game Code:</label>
   <input type="text" id="code" name="code" required pattern = "[0-9]{6}">
   <input type="submit">
+  <!-- Verify code against games in server -->
 
 </body>
 </html>
