--- a/login.html
+++ b/login.html
@@ -37,6 +37,7 @@
         <input type="submit">
     </li>
     <li>
+        <!-- Make sure passwords match before making it User Password-->
         <label> Confirm Password:</label>
         <input type="password" id="confirmpassword" required>
         <input type="submit">
