Added maps.html with example maps and example method of adding more. Added comments to index.html about signout processes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <h1> Maps for DND </h1>
     <nav>
         <h2><a href="login.html"> Login </a> or <a href="login.html"> Signup </a></h2>
+        <!-- If player is signed in, will display username instead of links and a signout button which will refresh the page without the signed-in user-->
         <h4> <a href="game.html" >Join a game </a> </h4>
 
     </nav>
