Added Github repo to footers in all html files

--- a/game.html
+++ b/game.html
@@ -17,4 +17,7 @@
   <!-- Verify code against games in server -->
 
 </body>
+<footer>
+    <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
+</footer>
 </html>
