Added a way to access map.html from index.html with an example user

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </nav>
 </head>
 <body>
+<a href="maps.html">Example: Player123</a>
+<p></p>
 </body>
 <footer>
     <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
