added links from maps.html to session.html along with comments to explain functionality

--- a/maps.html
+++ b/maps.html
@@ -11,7 +11,7 @@
     Welcome Player123! Not you? <button type="button"> Sign out </button> <br>
     <!-- Sign out redirects to the home page-->
     <!-- Cannot access this page without being signed in-->
-    <a href=""> Host a game </a>
+    <a href="session.html"> Host a game </a> <!--if map is not selected from list, pop up will ask for which map to be used in session -->
   </nav>
 </header>
 <body>
