--- a/login.html
+++ b/login.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/5.1/assets/css/docs.css" rel="stylesheet">
 </head>
 <header>
-    <nav>
-    <a href="index.html"> Home page <br></a>
-    <a href="game.html" > Join a game </a>
+    <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+    <a href="index.html" class="nav-link px-2 link-dark"> Home <br></a>
+    <a href="game.html" class="nav-link px-2 link-dark"> Join a game </a>
     </nav>
 </header>
 <body>
-    <div class = "returning">
+    <div style = "float:right" class = "returning">
         <h3> Returning Player?</h3>
         <li>
         <label for="username"> Username: </label>
@@ -26,7 +28,7 @@
             <!--verify password against username. If mismatched, display wrong username or password error -->
         </li>
     </div>
-<div class = "new player">
+<div style="float:left" class = "new player">
     <h3> New player? </h3>
     <li>
         <label for="newusername"> New Username: </label>
