--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link href="LoginCSS.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.1/assets/css/docs.css" rel="stylesheet">
 </head>
@@ -13,7 +14,10 @@
     </nav>
 </header>
 <body>
-    <div style = "float:right" class = "returning">
+<div class = "user">
+
+</div>
+    <div style = "float:right" class = "information">
         <h3> Returning Player?</h3>
         <li>
         <label for="username"> Username: </label>
@@ -28,7 +32,7 @@
             <!--verify password against username. If mismatched, display wrong username or password error -->
         </li>
     </div>
-<div style="float:left" class = "new player">
+<div style="float:left" class = "infomation">
     <h3> New player? </h3>
     <li>
         <label for="newusername"> New Username: </label>
