--- a/login.html
+++ b/login.html
@@ -13,12 +13,12 @@
     <a href="game.html" class="nav-link px-2 link-dark"> Join a game </a>
     </nav>
 </header>
+<div class="image">
 <body>
 <div class = "user">
 
 </div>
 <div class = "information">
-<div class = "login_background"></div>
 
     <div class = "returning">
         <h3 class = "infotitle"> Returning Player?</h3>
@@ -57,6 +57,7 @@
         <input class = "new_info" type="email" id="useremail" name="useremail" required pattern="[A-z0-9]{1,}@[A-z0-9]{1,}[.][A-z]{3}">
         <!-- save user email in database. Used for account recovery and information -->
     </li>
+    <br>
     <input class = "submit" type="submit">
 </div>
 </div>
@@ -65,5 +66,7 @@
 </body>
 <footer>
     <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
+
 </footer>
-</html>0
+</html>
+</div>
