Combined the forms and fixed the image

--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <a href="index.html" class="nav-link px-2 link-dark"> Home <br></a>
     <a href="game.html" class="nav-link px-2 link-dark"> Join a game </a>
     </nav>
+
 </header>
 <div class="image">
 <body>
@@ -33,10 +34,8 @@
             <!--verify password against username. If mismatched, display wrong username or password error -->
         </li>
 <br>
-        <input class = "submit" type="submit"/>
-
-    </div>
-<div class = "newplayer">
+        <input class = "submit" type="submit" value="Login">
+<br>
     <h3 class = "infotitle"> New player? </h3>
     <li>
         <label for="newusername"> New Username: </label>
@@ -58,7 +57,7 @@
         <!-- save user email in database. Used for account recovery and information -->
     </li>
     <br>
-    <input class = "submit" type="submit">
+    <input class = "submit" type="submit" value = "Sign up">
 </div>
 </div>
 
