--- a/login.html
+++ b/login.html
@@ -4,21 +4,46 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link href="LoginCSS.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="https://getbootstrap.com/docs/5.1/assets/css/docs.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<header>
-    <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <a href="index.html" class="nav-link px-2 link-dark"> Home <br></a>
-    <a href="game.html" class="nav-link px-2 link-dark"> Join a game </a>
-    </nav>
 
-</header>
-<div class="image">
+
 <body>
-<div class = "user">
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand link-dark" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link link-dark" aria-current="page" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-dark" href="game.html">Join a Game</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <li class="nav-item dropstart">
+            <a class="nav-link dropdown-toggle link-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Sign in
+                <!--Display username if signed in -->
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="nav-item dropdown-item link-dark" href="maps.html">Your Maps</a></li>
+                <li><a class="dropdown-item link-dark" href="session.html">Start A Session</a></li>
+                <li><a class="dropdown-item link-dark" href="index.html">Sign Out</a></li>
+            </ul>
+        </li>
+    </nav>
+</header>
 
-</div>
+<div class="image">
 <div class = "information">
 
     <div class = "returning">
@@ -61,11 +86,10 @@
 </div>
 </div>
 
-
 </body>
 <footer>
     <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
 
 </footer>
-</html>
 </div>
+</html>
