--- a/index.html
+++ b/index.html
@@ -2,20 +2,61 @@
 <html lang="en">
 <head>
     <title> Home  </title>
-    <h1> Maps for DND </h1>
-    <nav>
-        <h2><a href="login.html"> Login </a> or <a href="login.html"> Signup </a></h2>
-        <!-- If player is signed in, will display username instead of login/signup link and a signout button which will refresh the page and sign out the user-->
-        <h4> <a href="game.html" >Join a game </a> </h4>
-
-    </nav>
+    <link href = "indexCSS.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<a href="maps.html">Example: Player123</a>
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand link-dark" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link link-dark" aria-current="page" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link-dark" href="game.html">Join a Game</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <li class="nav-item dropstart">
+            <a class="nav-link dropdown-toggle link-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Sign in
+                <!--Display username if signed in -->
+            </a>
+            <ul class="dropdown-menu">
+                <li><a class="nav-item dropdown-item link-dark" href="maps.html">Your Maps</a></li>
+                <li><a class="dropdown-item link-dark" href="session.html">Start A Session</a></li>
+                <li><a class="dropdown-item link-dark" href="index.html">Sign Out</a></li>
+            </ul>
+        </li>
+    </nav>
+</header>
+<div class="image">
+    <div class="gap">
+
+    </div>
+<div class = "container1">
+    <h1 class = "text-center"> Maps for DND </h1>
+<li class="text-center"> Ever wanted to have everyone on the same page during your games? Tired of trying to remember where everyone is? No fear! Upload an image to Maps for DND and host sessions where everyone can interact with the map in real time! Sign up to access your uploaded maps, or stay anonymous and join in a game with your friend's code- no fuss.
+</li>
+
+</div>
+    <div class="example">
+<a  class= "nav-link text-center link-dark"  href="maps.html">Example: Player123</a>
+    </div>
 <p></p>
 </body>
 <footer>
-    <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
+    <a class = "text-center link-dark" href="https://github.com/Teddy-Dragon/startup" > Kaylee's Github </a>
 </footer>
+</div>
 
 </html>
