--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-    <link href = "Base.css" rel="stylesheet">
+    <link href = "gameCSS.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -41,11 +41,17 @@
         </li>
     </nav>
 </header>
-<div class="image">
 
-  <label for="code"> Game Code:</label>
-  <input type="text" id="code" name="code" required pattern = "[0-9]{6}">
-  <input type="submit">
+<div class="image">
+    <div class = "gap"> </div>
+
+    <div class="text-center">
+    <ul class = "code">
+        <li><label for="code"> Game Code:</label></li>
+        <li><input type="text" id="code" name="code" required pattern = "[0-9]{6}"></li>
+        <li> <br> <input class="submit" type="submit" value = "Find Game"></li>
+    </ul>
+    </div>
   <!-- Verify code against games in server -->
 
 </body>
