figured out how to make the edges of the box smaller in index.html and indexCSS.css

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
     <div class="gap">
 
     </div>
+    <div class = "text-center">
 <div class = "container1">
     <h1 class = "text-center"> Maps for DND </h1>
 <li class="text-center"> Ever wanted to have everyone on the same page during your games? Tired of trying to remember where everyone is? No fear! Upload an image to Maps for DND and host sessions where everyone can interact with the map in real time! Sign up to access your uploaded maps, or stay anonymous and join in a game with your friend's code- no fuss.
 </li>
 
+</div>
 </div>
     <div class="example">
 <a  class= "nav-link text-center link-dark"  href="maps.html">Example: Player123</a>
