--- a/session.html
+++ b/session.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Session</title>
+  <link href = "Base.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
+
+<body>
 <header>
-  <nav>
-    <a href="index.html">Home<br></a>
-    Welcome Player123! Not you? <button type="button"> Sign out </button> <br>
-    <a href="maps.html">Your Maps<br></a>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand link-dark" href="index.html">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link link-dark" aria-current="page" href="login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link-dark" href="game.html">Join a Game</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <li class="nav-item dropstart">
+      <a class="nav-link dropdown-toggle link-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Sign in
+        <!--Display username if signed in -->
+      </a>
+      <ul class="dropdown-menu">
+        <li><a class="nav-item dropdown-item link-dark" href="maps.html">Your Maps</a></li>
+        <li><a class="dropdown-item link-dark" href="session.html">Start A Session</a></li>
+        <li><a class="dropdown-item link-dark" href="index.html">Sign Out</a></li>
+      </ul>
+    </li>
   </nav>
 </header>
-<body>
-<p></p>
 <label for="sessionname"> Session name</label>
-<input type="text" id="sessionname" name="sessionname"><input type="submit"> <!-- Once name is inputted, cannot be changed -->
+<input type="text" id="sessionname" name="sessionname"><input type="submit" value = "Start Game"> <!-- Once name is inputted, cannot be changed -->
 <p></p>
 <div class="host">
   Host name: Student123
