--- a/session.html
+++ b/session.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Session</title>
-  <link href = "Base.css" rel="stylesheet">
+  <link href = "sessionCSS.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -42,27 +42,53 @@
     </li>
   </nav>
 </header>
+
+<div class="image">
+  <div class = "gap"></div>
+  <div class = "body2">
+    <div class="everything">
+  <div class = "text-center">
+  <div class="sessionname1">
 <label for="sessionname"> Session name</label>
 <input type="text" id="sessionname" name="sessionname"><input type="submit" value = "Start Game"> <!-- Once name is inputted, cannot be changed -->
 <p></p>
-<div class="host">
-  Host name: Student123
+  </div>
+  </div>
+
+<div class="text-center">
+  <div class = "sessioninfo1">
+<table class = "sessioninfo">
+
+  <tr>
+    <th> Host: Player123</th>
+    <th> Map Name: Map1 </th>
+    <th> Icons </th>
+  </tr>
+  </table>
+    </div>
 </div>
-<div class = "map">
-  Map name: Map 1
-  <img src="simpleAfrica.jpg" width="400px">
-</div>
-<div class="players">
-  <br>
-  <!--verify session codes to running sessions. If someone inputs the correct session code, they will join the game and will be displayed here. -->
-  <h3>Current Players</h3>
-  <li> Player 1</li>
-  <li> Player 2</li>
+      <div class="anotherone">
+<div class = "mapinterface">
+  <img src="simpleAfrica.jpg" class="picture">
 </div>
 
+  <div class="players_andcode">
+    <br>
+    <!--verify session codes to running sessions. If someone inputs the correct session code, they will join the game and will be displayed here. -->
+    <h3>Current Players</h3>
+    <li> Player 1</li>
+    <li> Player 2</li>
+    <h4> Session Code</h4>
+    <p> 123456 </p> <!-- Randomly generated 6 digit code unique to one instance of a session until it ends. New one generated upon creation of a new session -->
+  </div>
+  </div>
+    </div>
+</div>
+
+</div>
 </body>
 <footer>
-  <h4> Session Code</h4>
-  <p> 123456 </p> <!-- Randomly generated 6 digit code unique to one instance of a session until it ends. New one generated upon creation of a new session -->
+
 </footer>
+</div>
 </html>
