Made it so the image in session.html sources to github repo

--- a/session.html
+++ b/session.html
@@ -69,7 +69,7 @@
 </div>
       <div class="anotherone">
 <div class = "mapinterface">
-  <img src="simpleAfrica.jpg" class="picture">
+  <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleAfrica.jpg?raw=true" class="picture">
 </div>
 
   <div class="players_andcode">
