--- a/maps.html
+++ b/maps.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Maps</title>
-  <link href = "Base.css" rel = "stylesheet">
+  <link href = "mapsCSS.css" rel = "stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -42,43 +42,58 @@
   </nav>
 </header>
 
-<h2> Your maps </h2>
+<div class = "image">
+<div class = "gap"></div>
+<div class = "everything">
+
+<h2 class="text-center"> Your maps </h2>
 <div class = "Maps">
     <p><table>
-      <tr>
-      <th>Map name</th>
-      <th>Map Information</th>
-      <th>Map Image</th>
-        <th> Host Game</th>
+
+      <tr class="heading">
+
+      <th class="text-center">Map name</th>
+      <th class="text-center">Map Information</th>
+      <th class="text-center">Map Image</th>
+        <th class="text-center"> Host Game</th>
+
       </tr>
-      <tr>
-        <td>Map1</td>
-        <td> This is the first map and here is some information about it </td>
-        <td> <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleAfrica.jpg?raw=true" width="400px"> </td>
-        <td> <a href="session.html"> Use map </a></td> <!--Sends map information over to session.html-->
+
+<div class = "map1">
+      <tr class = "map">
+        <td class="text-center">Map1</td>
+        <td class="text-center"> This is the first map and here is some information about it </td>
+        <td class="text-center"> <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleAfrica.jpg?raw=true" width="400px"> </td>
+        <td class="text-center link-dark"> <a href="session.html"> Use map </a></td> <!--Sends map information over to session.html-->
       </tr>
-  <tr>
-    <td> Map 2 </td>
-    <td> This is the second map and here is some information on it </td>
-    <td> <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleAsia.jpg?raw=true" width = "400px"></td>
-  <td><a href="session.html"> Use map</a></td> <!--Sends map information over to session.html-->
+</div>
+
+  <tr class = "map2">
+    <td class="text-center"> Map 2 </td>
+    <td class="text-center"> This is the second map and here is some information on it </td>
+    <td class="text-center"> <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleAsia.jpg?raw=true" width = "400px"></td>
+  <td class="text-center link-dark"><a href="session.html"> Use map</a></td> <!--Sends map information over to session.html-->
   </tr>
-  <tr>
-    <td> Map 3</td>
-    <td> This is the third map and here is some information. This is going to be longer than the usual amount of information to see how it deals with formating</td>
-    <td> <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleNorthAmerica.png?raw=true" width = "400px"></td>
-    <td><a href="session.html">Use map</a></td> <!--Sends map information over to session.html-->
+
+  <tr class = "map3">
+    <td class="text-center"> Map 3</td>
+    <td class="text-center"> This is the third map and here is some information. This is going to be longer than the usual amount of information to see how it deals with formating</td>
+    <td class="text-center"> <img src="https://github.com/Teddy-Dragon/startup/blob/main/simpleNorthAmerica.png?raw=true" width = "400px"></td>
+    <td class="text-center link-dark"><a href="session.html">Use map</a></td> <!--Sends map information over to session.html-->
   </tr>
+  <div class = "separate"></div>
   <td> <label for="newmap"> Map name: </label> <input type="text" id="newmap" name="newmap"> <input type="submit"> </td>
   <td> <label for="newmapinfo">Map Information: </label><input type="text" id="newmapinfo" name="newmapinfo"><input type="submit"></td>
   <td> <label for="newmapimage"> Map image: </label> <input type="file" id="newmapimage" name="newmapimage" accept=".jpg, .jpeg, .png"><input type="submit"></td>
   <td> Save to host </td>
   <!-- Save new maps to database under username. -->
     </table></p>
-</div>
 
+</div>
+</div>
 </body>
 <footer>
   <a href="https://github.com/Teddy-Dragon/startup"> Kaylee's Github </a>
 </footer>
+</div>
 </html>
